--- a/client/views/app.jade
+++ b/client/views/app.jade
@@ -2,7 +2,8 @@
 html(lang="en")
   head
     != SocketStream
-    meta(charset="utf-8")
+    meta(charset="utf-8")    
+    meta(name="viewport",content="width=device-width, initial-scale=1.0")
     title Dashku
   body
     .navbar.navbar-fixed-top
