Replaced glpyh icons with font awesome, bar 1 icon

--- a/client/css/widget.styl
+++ b/client/css/widget.styl
@@ -96,24 +96,23 @@
   .buttons
     float right
     opacity 0
-    width 23px
+    width 25px
     height 20px
     z-index 2
 
-    .edit
+    i.edit
+      margin 0px
+      padding 0px
       cursor pointer
       float left
-      width 10px
-      height 10px
-      background url('/images/cog.png')
+      color: #ffcc00
 
-    .delete
+    i.delete
+      margin 0px
+      padding 0px
       cursor pointer
-      margin-left 3px
-      float left
-      background url('/images/delete2.png')
-      width 10px
-      height 10px
+      float right
+      color red
 
   .header
     font-weight bold
@@ -152,7 +151,7 @@
   opacity 1
 
 .widget .ui-resizable-handle.ui-resizable-se
-  opacity 0
+color white
   width 14px
   height 14px
   float right
