--- a/client/templates/dashboard/widget.jade
+++ b/client/templates/dashboard/widget.jade
@@ -1,7 +1,7 @@
 .widget(data-id="{{_id}}", style="width:{{width}}px; height: {{height}}px;")
   .buttons
-    .edit(title="edit widget")
-    .delete(title="delete widget")
+      i.edit(title="edit widget").icon-cog
+      i.delete(title="delete widget").icon-remove-sign
   .header(contenteditable="true") {{name}}
   style(type="text/css") {{{scopedCSS}}}
   .content {{{html}}}
