Fixed warnings from jade about script/style tags

--- a/client/templates/dashboard/widget.jade
+++ b/client/templates/dashboard/widget.jade
@@ -3,5 +3,5 @@
     .edit(title="edit widget")
     .delete(title="delete widget")
   .header(contenteditable="true") {{name}}
-  style(type="text/css") {{{scopedCSS}}}
+  style.  {{{scopedCSS}}}
   .content {{{html}}}
