Removed excess dots from view templates

--- a/client/templates/dashboardView/widget.jade
+++ b/client/templates/dashboardView/widget.jade
@@ -1,4 +1,4 @@
 .widget(data-id="{{_id}}", style="width:{{width}}px; height: {{height}}px;")
   .header {{name}}
-  style(type="text/css").  {{{scopedCSS}}}
+  style(type="text/css") {{{scopedCSS}}}
   .content {{{html}}}
