--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -47,7 +47,7 @@ body
   box-shadow none
 
 a.brand
-  font-family 'Helvetica Neue'
+  font-family 'Helvetica Neue', 'Helvetica'
   font-size 2em
   font-weight 100 !important
   text-shadow 2px 2px 2px black
@@ -126,7 +126,7 @@ a.brand div.disconnected
 
   p
     margin 100px 0px 50px
-    font-family 'Helvetica Neue'
+    font-family 'Helvetica Neue', 'Helvetica'
     font-size 2em
     font-weight 100 !important
     text-shadow 2px 2px 2px black
@@ -136,7 +136,7 @@ a.brand div.disconnected
 
 .homepage .footer
   margin-top 100px
-  font-family 'Helvetica Neue'
+  font-family 'Helvetica Neue', 'Helvetica'
   font-size 10pt
   font-weight 100 !important
   line-height 1.2em
@@ -212,7 +212,7 @@ a.brand div.disconnected
   margin 5px
   color black
   font-size 9pt
-  font-family 'Helvetica Neue'
+  font-family 'Helvetica Neue', 'Helvetica'
   font-weight 600
   text-shadow none
   box-shadow 0px 5px 5px black
