Cleaned up those pesky Jade warnings, and converted a WidgetTemplate into JS

--- a/client/templates/dashboard/main.jade
+++ b/client/templates/dashboard/main.jade
@@ -14,6 +14,6 @@ style(id="dashboardStyle"). {{{css}}}
         i.icon-white.icon-trash
   .row.switch-width
     .span12#widgets(data-dashboardId="{{_id}}")
-      {{#widgets}}
-      {{> widget}}
-      {{/widgets}}
+      | {{#widgets}}
+      | {{> widget}}
+      | {{/widgets}}
