--- a/client/templates/dashboardView/main.jade
+++ b/client/templates/dashboardView/main.jade
@@ -5,6 +5,6 @@ style#dashboardStyle. {{{css}}}
       h1.name {{name}}
   .row.switch-width
     .span12#widgets
-      {{#widgets}}
-      {{> widget}}
-      {{/widgets}}
+      | {{#widgets}}
+      | {{> widget}}
+      | {{/widgets}}
