--- a/client/templates/homepage/features.jade
+++ b/client/templates/homepage/features.jade
@@ -48,5 +48,4 @@
     .featureImage
       img(src="/images/features/9-infinity.png", width="100%", height="100%")
     p Unlike other Dashboard services, we don't place limits on how many dashboards and widgets you can use.
-  .span12.footer
-    &copy; 2012 Paul Jensen
+  .span12.footer &copy; 2014 Paul Jensen
