--- a/client/templates/widget/templates.jade
+++ b/client/templates/widget/templates.jade
@@ -3,9 +3,9 @@
     h3 Choose a template
     a.btn.btn-primary.pull-right#goBack Back
   .span7.content
-    {{#widgetTemplates}}
+    | {{#widgetTemplates}}
     .widgetTemplate(data-id="{{_id}}")
       .name {{name}}
       .snapshot
         img(src="{{snapshotUrl}}")
-    {{/widgetTemplates}}
+    | {{/widgetTemplates}}
