--- a/client/templates/dashboard/nav.jade
+++ b/client/templates/dashboard/nav.jade
@@ -5,9 +5,9 @@
         span Dashboards
         b.caret
       ul.dropdown-menu#dashboardMenuItems
-        {{#dashboards}}        
-        {{> dashboardMenuItem}}
-        {{/dashboards}}
+        | {{#dashboards}}        
+        | {{> dashboardMenuItem}}
+        | {{/dashboards}}
         li.divider
         li
           a#newDashboard(href="#")
