--- a/client/views/app.jade
+++ b/client/views/app.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     != SocketStream
     meta(charset="utf-8")    
-    meta(name="viewport",content="width=device-width, initial-scale=1.0")
+    meta(name="viewport",content="width=device-width, initial-scale=1.0, minimal-ui")
     title Dashku
   body
     .navbar.navbar-fixed-top
