--- a/client/templates/dashboard/dashboardMenuItem.jade
+++ b/client/templates/dashboard/dashboardMenuItem.jade
@@ -1,4 +1,5 @@
 li(data-dashboardId="{{_id}}")
   a.showDashboard(data-id="{{_id}}", href="#") 
-    i.icon-white.icon-th
+    i.fa.fa-tachometer
+    | &nbsp;
     span {{name}}
