--- a/client/templates/dashboard/nav.jade
+++ b/client/templates/dashboard/nav.jade
@@ -11,9 +11,11 @@
         li.divider
         li
           a#newDashboard(href="#")
-            i.icon-white.icon-plus
+            i.fa.fa-plus
+            | &nbsp;
             span New Dashboard  
     li
       a#newWidget(href="#")
-        i.icon-white.icon-plus
+        i.fa.fa-plus
+        | &nbsp;
         span New Widget
