--- a/client/templates/dashboard/widget.jade
+++ b/client/templates/dashboard/widget.jade
@@ -1,7 +1,7 @@
 .widget(data-id="{{_id}}", style="width:{{width}}px; height: {{height}}px;")
   .buttons
-    .edit(title="edit widget")
-    .delete(title="delete widget")
+    i.fa.fa-cog.edit(title="edit widget")
+    i.fa.fa-times-circle-o.delete(title="delete widget")
   .header(contenteditable="true") {{name}}
   style  {{{scopedCSS}}}
   .content {{{html}}}
