Adjusted the alignment and width of the dashboard edit buttons

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -236,3 +236,10 @@ a.brand div.disconnected
 
   .btn-danger
     vertical-gradient(#CC0000, #990000)
+
+// dashboard edit page
+
+.settings a {
+  min-width 19px
+  text-align center
+}
