Refreshed the wallpaper

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -39,11 +39,11 @@ form
 // Homepage
 
 body
-  background url('/images/black_linen_v2.png')
+  background url('/images/dark_mosaic.png')
   color white
 
 .navbar-inner
-  background rgba(20,20,20,0.9)
+  background rgba(0,0,0,0.5)
   box-shadow none
 
 a.brand
